2009-08-02  Vladimir Tzankov  <vtzankov@gmail.com>

	BERKELEY-DB: fix problems with MT
	* /modules/berkeley-db/bdb.c (SYSCALL1, my_fopen): move error reporting
	outside begin_blocking_system_call/end_blocking_system_call
	(BDB::DBE-SET-OPTIONS): fix a gc-safety bug

2009-07-31  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (with_pinned_varobject): add & export
	* modules/rawsock/rawsock.c (with_buffer_arg, with_sockaddr_arg): use it

2009-07-31  Vladimir Tzankov  <vtzankov@gmail.com>

	RAWSOCK: fix object unpinning
	* modules/rawsock/rawsock.c (with_sockaddr_arg, with_opt_sa_arg): when
	the "body" changes the STACK and pinned object is passed as STACK_x,
	ASSERT_VALID_UNPIN() aborts
	(SOCK-READ, SOCK-READ): unpin object after system calls returns

2009-07-30  Sam Steingold  <sds@gnu.org>

	RAWSOCK: pin everything properly
	* modules/rawsock/rawsock.c (with_sockaddr_arg): replaces CHECK_SOCKADDR
	(PIN_ARG_USE, PIN_ARG_DECL, PIN_DECL, PIN_INIT): define based on
	MULTITHREAD to pass pinned_chain_t objects around
	(fill_iovec): accept a vector of pinned_chain_t on MULTITHREAD
	and pin subvectors
	(optional_sockaddr_argument): accept a pinned_chain_t on
	MULTITHREAD and ping the socket arg
	(with_opt_sa_arg): a wrapper for optional_sockaddr_argument()
	(SOCKADDR-FAMILY, BIND, CONNECT, GETNAMEINFO): use
	with_sockaddr_arg instead of CHECK_SOCKADDR
	(ACCEPT, GETPEERNAME, GETSOCKNAME, RECVFROM, SENDTO): use
	with_opt_sa_arg instead of optional_sockaddr_argument
	(fill_msghdr): accept a vector of pinned_chain_t on MULTITHREAD
	and pass it on to fill_iovec
	(RECVMSG, SENDMSG) [MULTITHREAD]: pass pinned_chain_t to fill_msghdr
	(SOCK-READ, SOCK-WRITE) [MULTITHREAD]: pass pinned_chain_t to fill_iovec

2009-07-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (interrupt_thread) [MULTITHREAD]: prevent races when
	changing/reading pointers to objects on which thread waits

2009-07-29  Vladimir Tzankov  <vtzankov@gmail.com>
